solves slogan align

--- a/styles.css
+++ b/styles.css
@@ -114,7 +114,6 @@ body {
   font-size: 20px;
   color: #6e7575;
   font-weight: 300;
-  padding-left: 400px;
 }
 
 .scope-text {
